# FaceControl

./: .gitignore  BlinkJudge.cpp  BlinkJudge.h  CMakeLists.txt  DistributionPlot.cpp  DistributionPlot.h  FaceDetector.cpp  FaceDetector.h  LineChart.cpp  LineChart.h  QtGUI.cpp  QtGUI.h  README.md  main.cpp
3DDFAImpl/: .gitignore  cameraRun.py  drawLandmarksOpencv.py
3DDFAImpl/utils/cython/: mesh_core_cython.cpp
MyImplCpp/: DistributionPlot.cpp  DistributionPlot.h  FaceDetector.cpp  FaceDetector.h  LineChart.h  main.cpp
old/: LineChart.cpp
